--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ default: &default
 
 development:
   <<: *default
-  database: assist_flow_backend_dev
+  database: assist_flow_db
 
 test:
   <<: *default
